bk_ida/gccida/g3/find_reloads_address
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/find_reloads_address/src/reload.c:5033:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode mode, 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/find_reloads_address/src/reload.c:5038:1: error: must use 'enum' tag to refer to type 'reload_type'
reload_type type, 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/find_reloads_address/src/reload.c:5046:4: error: expected ';' after expression
rtx memloc; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/find_reloads_address/src/reload.c:5046:5: error: use of undeclared identifier 'memloc'; did you mean 'malloc'?
rtx memloc; // rax 
    ^~~~~~
    malloc
/usr/include/malloc.h:38:14: note: 'malloc' declared here
extern void *malloc (size_t __size) __THROW __attribute_malloc__ __wur;
             ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/find_reloads_address/src/reload.c:5048:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v17; // edi 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/find_reloads_address/src/reload.c:5049:1: error: must use 'enum' tag to refer to type 'reload_type'
reload_type v18; // r9d 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/find_reloads_address/src/reload.c:5057:1: error: must use 'enum' tag to refer to type 'reload_type'
reload_type v28; // r9d 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/find_reloads_address/src/reload.c:5059:4: error: expected ';' after expression
rtx v30; // rdi 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/find_reloads_address/src/reload.c:5059:5: error: use of undeclared identifier 'v30'
rtx v30; // rdi 
    ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/find_reloads_address/src/reload.c:5060:4: error: expected ';' after expression
rtx v31; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/find_reloads_address/src/reload.c:5060:5: error: use of undeclared identifier 'v31'; did you mean 'v21'?
rtx v31; // rax 
    ^~~
    v21
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/find_reloads_address/src/reload.c:5051:9: note: 'v21' declared here
__int16 v21; // ax 
        ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/find_reloads_address/src/reload.c:5062:4: error: expected ';' after expression
rtx v33; // r12 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/find_reloads_address/src/reload.c:5062:5: error: use of undeclared identifier 'v33'
rtx v33; // r12 
    ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/find_reloads_address/src/reload.c:5075:4: error: expected ';' after expression
rtx v46; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/find_reloads_address/src/reload.c:5075:5: error: use of undeclared identifier 'v46'
rtx v46; // rax 
    ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/find_reloads_address/src/reload.c:5076:4: error: expected ';' after expression
rtx v47; // r12 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/find_reloads_address/src/reload.c:5076:5: error: use of undeclared identifier 'v47'
rtx v47; // r12 
    ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/find_reloads_address/src/reload.c:5077:4: error: expected ';' after expression
rtx v48; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/find_reloads_address/src/reload.c:5077:5: error: use of undeclared identifier 'v48'
rtx v48; // rax 
    ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/find_reloads_address/src/obj/reload.o] Error 1
